--- a/login_form/styles.css
+++ b/login_form/styles.css
@@ -11,14 +11,19 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: url('img.jpg') no-repeat;
+    background: url('img.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 .wrapper {
     width: 420px;
-    background: purple;
+    background: transparent;
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 .wrapper h1 {
     font-size: 36px;
