--- a/login_form_try/styles.css
+++ b/login_form_try/styles.css
@@ -15,3 +15,23 @@ body {
     background-size: cover;
     background-position: center;
 }
+.wrapper {
+    width: 420px;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    background: transparent;
+    backdrop-filter: blur(20px);
+}
+.wrapper h1 {
+    text-align: center;
+    font-size: 34px;
+    font-weight: 700;
+    margin: 20px;
+}
+.wrapper .input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
