--- a/login_form_try/styles.css
+++ b/login_form_try/styles.css
@@ -35,3 +35,30 @@ body {
     height: 50px;
     margin: 30px 0;
 }
+.wrapper .input-box input{
+    margin-top: 5px;
+    width: 100%;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+}
+.wrapper .register-forgot {
+    display: flex;
+    justify-content: space-between;
+    margin: -15px 0 15px;
+}
+.wrapper ,.register-forgot a {
+    text-decoration: none;
+    color: black;
+}
+.wrapper .register-forgot a:hover{
+    color: aliceblue;
+    text-decoration: underline;
+}
+.wrapper button {
+    width: 35%;
+    height: 35px;
+    font-weight: 600;
+    border: none;
+    outline: none;
+}
