--- a/grading_system/styles.css
+++ b/grading_system/styles.css
@@ -28,3 +28,35 @@ body .wrapper {
     border: 1px solid black;
     border-radius: 15px;
 }
+.wrapper .headtitle h1 {
+    text-align: center;
+    padding: 10px;
+    font-weight: 800;
+}
+.wrapper .headtitle p {
+    padding: 10px;
+    justify-items: right;
+    font-weight: 600;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+table tr td {
+    text-align: center;
+}
