--- a/movie_app/style.css
+++ b/movie_app/style.css
@@ -53,6 +53,7 @@ input {
     padding: 10px 10px;
 }
 .card {
+    height: 500px;
     width: fit-content;
     border-radius: 19px;
     padding: 15px;
